--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CarWash</title>
+  <title>critter car wash</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="initial-scale=1">
 </head>
 <body>
-
+  <div class="jumbotron">
+    <div class="container">
+      <h1>welcome to the car wash</h1>
+      <p><%= link_to "Get a Car Wash!", new_transaction_path, class: "btn btn-primary btn-lg" %></p>
+      <p><%= link_to "View Transaction History", transactions_path, class: "btn btn-primary btn-lg" %></p>
+    </div>
+  </div>
 <%= yield %>
 
 </body>
