Add confirmation number to make the receipt more realistic

--- a/app/assets/stylesheets/transaction.scss
+++ b/app/assets/stylesheets/transaction.scss
@@ -29,3 +29,7 @@
 .form-group input[type="checkbox"]:checked + .btn-group > label span:last-child {
   display: none;
 }
+.receipt {
+	margin: 0 auto;
+	float: none;
+}
