Configure heroku. Minor tweaks to interface

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -43,7 +43,7 @@
               </td>
               <td>
                 <%= transaction.customer.license.upcase %><br>
-                <small><%= transaction.confirmation %></small>
+                <small>Access #: <%= transaction.confirmation %></small>
               </td>
               <td>
                 <%= transaction.created_at.strftime("%m/%d/%Y") %>
