--- a/app/views/transactions/_search.html.erb
+++ b/app/views/transactions/_search.html.erb
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form class="navbar-form navbar-left" role="search" action="#" method="get">
         <div class="form-group">
-          <label for="search_text">Search By License</label>
+          <label for="search_text">Search By License Plate Number:</label>
           <input type="text" name="search_text" value="" class="form-control">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
