Add rspec testing for models (Note: obviously not TDD, but functional requirements were the priority)

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -43,7 +43,9 @@
               </td>
               <td>
                 <%= transaction.customer.license.upcase %><br>
-                <small>Access #: <%= transaction.confirmation %></small>
+                <% if transaction.confirmation %>
+                  <small>#<%= transaction.confirmation %></small>
+                <% end %>
               </td>
               <td>
                 <%= transaction.created_at.strftime("%m/%d/%Y") %>
